--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@vercel/speed-insights": "^1.0.12",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "18",
